--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Meenu-Mwol",
     "description": "Meenu mwol is the Modified Version of WhatsAsena, Made By New developers with Baileys.",
-    "logo": "https://i.imgur.com/2nYs8dN.jpg",
+    "logo": "https://i.imgur.com/E6m9sSm.jpeg",
     "keywords": ["whatsapp", "userbot", "Liza", "WhatsAsena", "mwol", "bot", "ai"],
     "repository": "https://github.com/Meenutty/Meenu-mwol",
     "website":   "https://github.com/Meenutty/Meenu-mwol",
