--- a/Meenutty/Dockerfile
+++ b/Meenutty/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Asia/Kolkata
 RUN npm install supervisor -g
 RUN yarn install --no-audit
-RUN git clone https://github.com/Chunkindepadayali/media
+RUN git clone https://github.com/Meenutty/media
 
 CMD ["node", "bot.js"]
