--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "Meenu-mwol",
+  "name": "JulieMwol",
   "version": "7.3.6",
-  "description": "Meenu mwol is the Modified Version of WhatsAsena, Made By @Team- with Baileys.",
-  "main": "./Meenu-mwol/bot.js",
+  "description": "Julie Mwol is the Modified Version of WhatsAsena, Made By @farhan-dqz with Baileys.",
+  "main": "./Julie-Mwol/bot.js",
   "scripts": {
     "start": "supervisor -s bot.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Meenutty/Meenu-mwol.git"
+    "url": "git+https://github.com/farhan-dqz/Julie-Mwol.git"
   },
   "keywords": [
     "whatsapp",
@@ -17,13 +17,13 @@
     "asena",
     "WhatsAsena"
   ],
-  "author": "Meenutty",
-  "developer": "@Meenutty / @Meenutty",
+  "author": "farhan-dqz",
+  "developer": "@TOXIC-DEVIL / @farhan-dqz",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/Meenutty/Meenu-mwol/issues"
+    "url": "https://github.com/farhan-dqz/Julie-Mwol/issues"
   },
-  "homepage": "https://github.com/Meenutty/Meenu-mwol#readme",
+  "homepage": "https://github.com/farhan-dqz/Julie-Mwol#readme",
   "dependencies": {
     "@adiwajshing/baileys": "3.5.3",
     "@lh2020/speedtest-net": "^2.1.1",
