--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
             "required": true,
             "value": "en"
         },
+        "OWNER_NAME": {
+            "description": "Fill your name in here. it will show your name in .owner command reply",
+            "required": true,
+            "value": "Jackz"
+        },
         "BGM_FILTER": {
             "description": "If you likes bgm you can write 'true'. Otherwise false",
             "required": false,
