--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "exchange-rates-api": "^1.0.2",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
+    "file-type": "^16.5.1",
     "g-i-s": "^2.1.6",
     "google-translate-tts": "^0.3.0",
     "got": "^11.8.2",
@@ -69,6 +70,7 @@
     "solenolyrics": "^5.0.0",
     "translatte": "^3.0.0",
     "wikijs": "^6.0.1",
+    "wa-sticker-formatter": "^4.0.14",
     "yt-search": "^2.7.4",
     "ytdl-core": "^4.8.3"
   }
