--- a/julie/Dockerfile
+++ b/julie/Dockerfile
@@ -4,7 +4,7 @@ RUN git clone https://github.com/Meenutty/Meenu-mwol /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Asia/Kolkata
 RUN npm install supervisor -g
-RUN yarn install --no-audit
+yarn install --ignore-engines
 RUN git clone https://github.com/Jackz-ser/media  
 
 CMD ["node", "bot.js"]
